// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Packages should compile index page for packages: (Output File Strategy "members") (Option Group "1") 1`] = `
"**packages-example** • [Readme](index.md) \\| [Packages](packages.md)

***

# packages-example

## Packages

- [package-1](package-1/index.md)
- [package-2](package-2/index.md)
"
`;

exports[`Packages should compile index page for packages: (Output File Strategy "members") (Option Group "1") 2`] = `
"[packages-example](../packages.md) \\> **package-1** • [Readme](index.md) \\| [Exports](exports.md)

***

[packages-example](../packages.md) / package-1

# package-1

## Interfaces

- [PackageInterface](interfaces/PackageInterface.md)
"
`;

exports[`Packages should compile index page for packages: (Output File Strategy "members") (Option Group "1") 3`] = `
"[packages-example](../packages.md) \\> **package-2** • [Modules](index.md)

***

[packages-example](../packages.md) / package-2

# package-2

## Modules

- [module-1](module-1/index.md)
- [module-2](module-2/index.md)
"
`;

exports[`Packages should compile member page for packages: (Output File Strategy "members") (Option Group "1") 1`] = `
"[packages-example](../../packages.md) \\> **package-1** • [Readme](../index.md) \\| [Exports](../exports.md)

***

[packages-example](../../packages.md) / [package-1](../exports.md) / PackageInterface

# Interface: PackageInterface
"
`;

exports[`Packages should compile readmes for a packages: (Output File Strategy "members") (Option Group "1") 1`] = `
"**packages-example** • [Readme](index.md) \\| [Packages](packages.md)

***

# MY README

> Some block quote

Some text.

## Readme heading

Some text.
"
`;

exports[`Packages should compile readmes for a packages: (Output File Strategy "members") (Option Group "1") 2`] = `
"[packages-example](../packages.md) \\> **package-1** • [Readme](index.md) \\| [Exports](exports.md)

***

# PACKAGE 1 README

Readme content
"
`;

exports[`Packages should compile readmes for a packages: (Output File Strategy "members") (Option Group "2") 1`] = `
"**packages-example** • [Packages](index.md)

***

# MY README

> Some block quote

Some text.

## Readme heading

Some text.

## Packages

- [package-1](package-1/index.md)
- [package-2](package-2/index.md)
"
`;
